# cogni-display

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: Baglanti_Semasi.md  Connection_Schematic.md  Development_and_Architecture_Report.md  ESP32S3_Donanim_Raporu.md  ESP32S3_Hardware_Report.md  Gelistirme_ve_Mimari_Raporu.md
main/: CMakeLists.txt  config.h  http_client.c  http_client.h  idf_component.yml  led_animation.h  main_backup.c  ultrasonic.c  wifi_manager.h
main/header/: config.h  http_client.h  led_animation.h  mic_adc.h  ultrasonic.h  wifi_manager.h
main/src/: http_client.c  led_animation.c  main.c  mic_adc.c  ultrasonic.c  wifi_manager.c
server/: app.py  gemini_client.py  requirements.txt  serial_reader.py
server/templates/: dashboard.html
