idf_component_register(SRCS "src/main.c"
                            "src/ultrasonic.c"
                            "src/mic_adc.c"
                            "src/led_animation.c"
                            "src/wifi_manager.c"
                            "src/http_client.c"
                    INCLUDE_DIRS "header")
